name:                vizualize-this
version:             0.1.0.0
synopsis:            Audio Visualizer written in Haskell
homepage:            https://github.com/mhitza/vizualize-this

license:             MIT           
license-file:        LICENSE

author:              Marius Ghita
maintainer:          mhitza@gmail.com

category:            Graphics
build-type:          Simple
cabal-version:       >=1.8


executable vizualize-this
  main-is:             test.hs
  build-depends:       
      base ==4.5.*,
      random == 1.0.1.*,
      time == 1.4.0.*,
      pulse-simple == 0.1.14,
      GLFW == 0.5.1.*,
      GLUtil == 0.3.*,
      OpenGL == 2.8.0.*
